--- a/Frontend/app/src/main/res/layout/activity_settings.xml
+++ b/Frontend/app/src/main/res/layout/activity_settings.xml
@@ -96,7 +96,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onBackPressed"
