--- a/Frontend/app/src/main/res/layout/activity_action.xml
+++ b/Frontend/app/src/main/res/layout/activity_action.xml
@@ -241,8 +241,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="skip"
-        tools:layout_editor_absoluteX="179dp"
-        tools:layout_editor_absoluteY="664dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+        app:layout_constraintVertical_bias="0.75" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
