added animation to PlayActivity, added ability to update all player coins, lives, and current player turn. Also animation folder and added new third card icon for each color that is centered to represent a single life. also changed manifest to make PlayActivity main intent. code runs and compiles.

--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -77,44 +77,65 @@
 
         <ImageView
             android:id="@+id/greenIcon1"
+            android:visibility="visible"
             android:layout_width="45dp"
             android:layout_height="88dp"
             android:src="@drawable/greeniconshape"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        <ImageView
+            android:id="@+id/greenIcon2"
+            android:visibility="visible"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/greeniconshape"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+        <ImageView
+            android:id="@+id/greenIcon3"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/greeniconshape"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
         <!--persons-->
-
-        <ImageView
-            android:id="@+id/person1"
-            android:layout_width="53dp"
-            android:layout_height="88dp"
-            android:src="@drawable/person"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintHorizontal_bias="0.9"
-            app:layout_constraintStart_toStartOf="@+id/guideline7" />
-
-        <ImageView
-            android:id="@+id/person2"
-            android:layout_width="53dp"
-            android:layout_height="88dp"
-            android:src="@drawable/person"
-            app:layout_constraintBottom_toTopOf="@+id/blueIcon1"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6" />
 
         <ImageView
             android:id="@+id/person3"
             android:layout_width="53dp"
             android:layout_height="88dp"
             android:src="@drawable/person"
-            app:layout_constraintEnd_toStartOf="@+id/greenIcon1"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintHorizontal_bias="0.9"
             app:layout_constraintStart_toStartOf="@+id/guideline7"
-            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+            />
+
+        <ImageView
+            android:id="@+id/person4"
+            android:layout_width="53dp"
+            android:layout_height="88dp"
+            android:src="@drawable/person"
+            app:layout_constraintBottom_toTopOf="@+id/blueIcon1"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6" />
 
 
         <ImageView
-            android:id="@+id/oval1"
+            android:id="@+id/person1"
+            android:layout_width="53dp"
+            android:layout_height="88dp"
+            android:src="@drawable/person"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toEndOf="@+id/greenIcon2"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+        <ImageView
+            android:id="@+id/oval3"
             android:layout_width="53dp"
             android:layout_height="88dp"
             android:src="@drawable/greyoval"
@@ -122,36 +143,88 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="@+id/guideline" />
+        <TextView
+            android:id="@+id/oval3Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/oval3"
+            app:layout_constraintEnd_toEndOf="@+id/oval3"
+            app:layout_constraintStart_toStartOf="@+id/oval3"
+            app:layout_constraintTop_toTopOf="@+id/oval3"
+            />
+
+
+        <ImageView
+            android:id="@+id/oval4"
+            android:layout_width="53dp"
+            android:layout_height="85dp"
+            android:src="@drawable/greyoval"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toBottomOf="@+id/blueIcon2" />
+        <TextView
+            android:id="@+id/oval4Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/oval4"
+            app:layout_constraintEnd_toEndOf="@+id/oval4"
+            app:layout_constraintStart_toStartOf="@+id/oval4"
+            app:layout_constraintTop_toTopOf="@+id/oval4"
+           />
 
         <ImageView
             android:id="@+id/oval2"
             android:layout_width="53dp"
             android:layout_height="85dp"
             android:src="@drawable/greyoval"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintTop_toBottomOf="@+id/blueIcon2" />
-
-        <ImageView
-            android:id="@+id/oval3"
-            android:layout_width="53dp"
-            android:layout_height="85dp"
-            android:src="@drawable/greyoval"
             app:layout_constraintBottom_toTopOf="@+id/yellowicon2"
             app:layout_constraintStart_toStartOf="@+id/guideline7" />
+        <TextView
+            android:id="@+id/oval2Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/oval2"
+            app:layout_constraintEnd_toEndOf="@+id/oval2"
+            app:layout_constraintStart_toStartOf="@+id/oval2"
+            app:layout_constraintTop_toTopOf="@+id/oval2"
+            />
+
 
         <ImageView
-            android:id="@+id/oval4"
+            android:id="@+id/oval1"
             android:layout_width="53dp"
             android:layout_height="88dp"
             android:src="@drawable/greyoval"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintStart_toEndOf="@+id/greenIcon2"
+            app:layout_constraintEnd_toStartOf="@+id/greenIcon1"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintStart_toStartOf="@+id/guideline7"
             app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+        <TextView
+            android:id="@+id/oval1Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/oval1"
+            app:layout_constraintEnd_toEndOf="@+id/oval1"
+            app:layout_constraintStart_toStartOf="@+id/oval1"
+            app:layout_constraintTop_toTopOf="@+id/oval1"
+            />
 
 
         <ImageView
             android:id="@+id/yellowicon1"
+            android:visibility="visible"
             android:layout_width="45dp"
             android:layout_height="88dp"
             android:src="@drawable/yellowiconshape"
@@ -163,6 +236,7 @@
         <ImageView
             android:id="@+id/yellowicon2"
             android:layout_width="45dp"
+            android:visibility="visible"
             android:layout_height="88dp"
             android:src="@drawable/yellowiconshape"
             app:layout_constraintBottom_toTopOf="@+id/guideline5"
@@ -171,10 +245,22 @@
             app:layout_constraintVertical_bias="0.172" />
 
         <ImageView
+            android:id="@+id/yellowicon3"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/yellowiconshape"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintStart_toStartOf="@+id/guideline7"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.487" />
+
+        <ImageView
             android:id="@+id/blueIcon1"
             android:layout_width="45dp"
             android:layout_height="88dp"
             android:src="@drawable/blueiconshape"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/guideline5"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toTopOf="@+id/guideline3"
@@ -185,22 +271,28 @@
             android:layout_width="45dp"
             android:layout_height="88dp"
             android:src="@drawable/blueiconshape"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/guideline5"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
             app:layout_constraintTop_toTopOf="@+id/guideline3"
             app:layout_constraintVertical_bias="0.805" />
 
+
         <ImageView
-            android:id="@+id/greenIcon2"
+            android:id="@+id/blueIcon3"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:src="@drawable/greeniconshape"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+            android:src="@drawable/blueiconshape"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.487"  />
 
         <ImageView
             android:id="@+id/redIcon1"
             android:layout_width="45dp"
+            android:visibility="visible"
             android:layout_height="88dp"
             android:src="@drawable/rediconshape"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
@@ -209,9 +301,21 @@
         <ImageView
             android:id="@+id/redIcon2"
             android:layout_width="45dp"
+            android:visibility="visible"
             android:layout_height="88dp"
             android:src="@drawable/rediconshape"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+        <!--one life icon-->
+        <ImageView
+            android:id="@+id/redIcon3"
+            android:visibility="gone"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/rediconshape"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/oval3"
+            app:layout_constraintHorizontal_bias="0.435"
             app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -277,16 +381,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/person4"
-            android:layout_width="53dp"
-            android:layout_height="88dp"
-            android:src="@drawable/person"
-            app:layout_constraintStart_toStartOf="@+id/guideline7"
-            app:layout_constraintTop_toBottomOf="@+id/yellowicon1" />
+<!--        <ImageView-->
+<!--            android:id="@+id/person4"-->
+<!--            android:layout_width="53dp"-->
+<!--            android:layout_height="88dp"-->
+<!--            android:src="@drawable/person"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/guideline7"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/yellowicon1" />-->
 
         <ImageView
-            android:id="@+id/person5"
+            android:id="@+id/person2"
             android:layout_width="53dp"
             android:layout_height="88dp"
             android:src="@drawable/person"
@@ -340,9 +444,10 @@
             android:text="Button"
             app:layout_constraintBottom_toTopOf="@+id/oval3"
             app:layout_constraintEnd_toStartOf="@+id/timericon"
-            app:layout_constraintHorizontal_bias="0.42"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline7"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.132" />
 
 
         <!-- ... additional ImageView elements for red, blue, yellow, green icons -->
