--- a/Frontend/app/src/main/res/layout/message_item.xml
+++ b/Frontend/app/src/main/res/layout/message_item.xml
@@ -18,7 +18,7 @@
         android:textColor="#FFFFFF" />
 
     <TextView
-        android:id="@+id/tvMessage"
+        android:id="@+id/placement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
