--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -4,5 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="pressed_overlay">#1AFFFFFF</color> <!-- 10% opaque white -->
+    <color name="gold">#FFD700</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="bronze">#CD7F32</color>
+    <color name="defaultBackground">#E0E0E0</color> <!-- Your default color -->
 
 </resources>
